# iml_2025

./: .gitignore  Makefile  README.md  homework_1.py  homework_2.py  homework_22.ipynb  homework_3.py  homework_3_solution.ipynb  homework_3_solution.py  pyproject.toml
data/: bouba_kiki.npz  low_rank.csv  powerplant.csv
iml/: bandits.py  dl.py  dungeon.py  simple_classifier.py  simple_regression.py  tictactoe.py
