[project]
name = "iml-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.9",
    "jupytext>=1.17.3",
    "matplotlib>=3.10.6",
    "nbconvert>=7.16.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "tqdm>=4.67.1",
]
