[project]
name = "iml-2025"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.0",
    "jupytext>=1.18.1",
    "matplotlib>=3.10.7",
    "numpy<2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "tqdm>=4.67.1",
]
