[project]
name = "iml-2025"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0", # lets python run in jupyter notebooks
    "jupyterlab>=4.5.0", # jupyter notebook UI, runs in browser
    "jupytext>=1.18.1",
    "ipywidgets>=8.1.8",

    # using numpy<2 to be compatible torch 2.2.2
    # (grep for: "A module that was compiled using NumPy 1.x cannot...")
    "numpy<2", # array processing
    "matplotlib>=3.10.7", # graphs
    "seaborn>=0.13.2", # some nice graph presets
    "tqdm>=4.67.1", # progress bar
    "scikit-learn>=1.7.2", # classical machine learning stuff

    # using torch==2.2.2 because later versions are not compatible
    # with intel mac: see https://pytorch.org/blog/pytorch2-2/
    "torch==2.2.2",
    "torchvision==0.17.2",

    # huggingface datasets: online repository of datasets for deep learning
    "datasets>=4.4.1",
]
